0031455: Modeling Algorithms - useless pointer casts in BRepAlgoAPI classes

Useless casts are removed.

Off-topic: corrected description of constructor of TCollection_HAsciiString class from TCollection_HExtendedString for the case when input string contains non-Ascii character.